src/App.css
:root {
   --white: #ffffff;
   --dark-white: #e2e2e2;
   --light-grey: #aaaaaa;
   --dark-green: #054e23;
   --dark-blue: #00004b;
   --light-blue: #47479b;

   --input-preview-text: clamp(1rem, 4vw, 1.2rem);
}

* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
}

#root {
   width: 100%;

   background-color: var(--dark-white);
}

.content {
   display: flex;
   flex-direction: column;
   align-items: center;
}

ul {
   list-style-type: none;
}

li {
   width: 100%;
}

button {
   padding: 0.5vw 1vw;
   border-radius: 2vw;
   font-size: clamp(1rem, 3vw, 1.2rem);
   transition:
      transform 0.3s ease-in-out,
      box-shadow 0.3s ease-in-out;

   outline: none;
   border: 3px solid var(--dark-blue);
   background-color: var(--light-blue);
   color: var(--white);
}

button:hover,
button:focus-visible {
   transform: scale(1.2);
   box-shadow: 3px 3px 5px var(--dark-blue);
}

.delete-input:hover,
.delete-input:focus-visible {
   box-shadow: none;
}

.maker-header {
   display: flex;
   align-items: center;
   justify-content: flex-start;

   width: 100%;
   padding: 1vw 1vw 1vw 0;

   background-color: var(--dark-green);
   color: var(--white);
   font-size: clamp(0.8rem, 3.5vw, 1.2rem);
}

.maker-header img {
   width: auto;
   height: 6vh;
   padding: 0;
}

.scroll-text {
   display: flex;
   gap: 2vw;
   align-items: center;
   justify-content: center;

   width: 100%;
   padding: 1vw;
   margin-top: 1vh;

   text-decoration: underline;
   font-weight: bold;
   font-size: clamp(1.2rem, 3vw, 1.6rem);
}

.scroll-text img {
   width: 3vw;
   height: auto;
}

.cv-info {
   width: 95%;
   height: auto;

   margin-top: 5vh;
   padding: 3vw;
   border-radius: 2vw;
   background-color: var(--white);
}

.input-section {
   margin-bottom: 5vh;
}

.input-section .row:first-of-type {
   padding-top: 0;
}

.input-section-header {
   display: flex;
   justify-content: space-between;
   align-items: center;

   margin-bottom: 2vh;
   font-size: clamp(0.75rem, 5vw, 1.1rem);
}

.input-section-header h2 {
   text-decoration: underline;
}

.input-header-buttons {
   display: flex;
   gap: 2vw;
}

.input-field {
   display: flex;
   flex-direction: column;
   width: 100%;
}

.input-field input {
   width: 100%;
   height: 100%;
   padding: 1vw;

   border: 0.25vw solid var(--light-grey);
   font-size: 1rem;
}

.input-field input:focus {
   outline: 0.25vw solid var(--light-blue);
   border: none;
}

.input-field label {
   font-size: clamp(1rem, 4vw, 1.3rem);
   font-weight: bold;
   margin-bottom: 0.5vh;
}

.add-input {
   display: flex;
   justify-self: center;
   margin-top: 1vw;
}

.delete-input {
   display: flex;
   justify-self: flex-end;

   padding: 0;
   margin-top: 1vh;
   border: none;
}

.delete-input img {
   width: 5vw;
   height: auto;
   background-color: var(--white);
}

.row {
   display: flex;

   padding: 1vw;
   gap: 1vw;
   width: 100%;

   text-align: left;
}

.live-preview {
   height: 90vh;
   width: 95%;

   margin: 5vh 0;
   background-color: var(--white);

   display: grid;
   grid-template-rows: auto auto 1fr;
}

.preview-section ul {
   height: auto;
   width: 95%;

   display: grid;
   gap: 1vw;
   align-items: center;
   justify-content: center;
   justify-self: center;

   text-align: center;
   font-size: var(--input-preview-text);
}

.live-preview .preview-section:not(:first-child) > ul:last-child {
   border-bottom: 0.5vh solid var(--light-grey);
}

.preview-section h2 {
   margin-top: 2vh;
   padding: 0 1vw;

   font-size: clamp(1rem, 4vw, 1.2rem);
   color: var(--dark-blue);
   font-weight: bold;
   text-decoration: underline;
   text-decoration-color: var(--light-blue);
}

.personal-input-preview {
   min-width: 100%;
   grid-template-columns: 1fr;
   grid-template-rows: 1.5fr 1fr 1fr;

   background-color: var(--dark-blue);

   font-weight: bold;
   color: var(--white);
}

.educational-input-preview {
   grid-template-rows: 1fr;
   grid-template-columns: auto 1fr;
   margin-bottom: 1vh;
}

.experience-input-preview {
   grid-template-rows: auto repeat(1, 1fr);
   grid-template-columns: auto 1fr;
}

.personal-input-preview img {
   height: auto;
   width: 4vw;
}

.personal-input-preview p {
   font-size: clamp(1rem, 3vw, 1.25rem);
}

.preview-personal {
   justify-content: center;
   font-size: clamp(1.5rem, 5vw, 2rem);
}

.preview-personal p {
   font-size: clamp(1.5rem, 5vw, 2rem);
}

.preview-availability,
.preview-email {
   justify-content: space-evenly;
}

.preview-availability > div,
.preview-email > div {
   display: flex;
   justify-content: center;
   gap: 0.5vw;
   padding: 0;
}

.preview-schoolDate {
   grid-row: 1 / 2;
}

.preview-schoolDate,
.preview-experienceDate {
   align-self: flex-start;
   font-size: clamp(0.8rem, 3vw, 1rem);
}

.preview-schoolDate div,
.preview-experienceDate div {
   display: flex;
}

.preview-schoolDate div:last-child:before,
.preview-experienceDate div:last-child::before {
   display: flex;
   content: " - ";
   margin-right: 1vw;
}

.preview-schoolInfo {
   flex-direction: column;
   align-self: flex-start;
   font-size: var(--input-preview-text);
}

.preview-schoolInfo > :first-child p,
.preview-companyPosition > :first-child p {
   font-size: clamp(1.1rem, 5vw, 1.3rem);
   color: var(--light-blue);
   font-weight: bold;
}

.preview-companyPosition {
   grid-area: 1 / 2 / 2 / -1;
   display: flex;
   flex-direction: column;
   align-self: flex-start;
   gap: 0;
}

.preview-responsibilities {
   grid-area: 2 / 2 / -1 / -1;
   font-size: clamp(1rem, 3vw, 1.15rem);

   padding: 0 0 0.5vw 1vw;
}

@media (min-width: 800px) {
   .cv-info,
   .live-preview {
      width: 80vw;
   }

   .personal-input-preview img {
      width: 2.5vw;
   }

   .delete-input img {
      width: 3vw;
   }

   .preview-section ul {
      gap: 0;
   }
}

@media (min-width: 1200px) {
   .scroll-text {
      display: none;
   }

   .content {
      display: flex;
      align-items: flex-start;
      justify-content: center;
      flex-direction: row;
      gap: 3vw;
   }

   .cv-info {
      padding: 2vw;
      width: 35vw;
   }

   .input-section {
      margin-bottom: 3vh;
   }

   .input-section .row {
      padding-bottom: 0;
   }

   .input-section-header {
      margin-bottom: 1vh;
   }

   .input-header-buttons {
      gap: 1vw;
   }

   .input-field input {
      padding: 0.5vw;
   }

   .delete-input img {
      width: 1.8vw;
   }

   .live-preview {
      height: 100vh;
      width: 45vw;
   }

   .personal-input-preview img {
      width: 1.3vw;
   }

   .personal-input-preview .row {
      padding: 0.5vw;
   }
}

